--- a/public/CreateProjectPage.html
+++ b/public/CreateProjectPage.html
@@ -159,6 +159,7 @@
                     <label class="col-sm-2 control-label"> Project Completion</label>
                     <div class="col-sm-10">
                       <select class="form-control m-bot15">
+                        <option>0%</option>
                         <option>10%</option>
                         <option>20%</option>
                         <option>30%</option>
