--- a/public/CreateProjectPage.html
+++ b/public/CreateProjectPage.html
@@ -37,9 +37,12 @@
       <script src="js/respond.min.js"></script>
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
-    
-   <!-- Fix NavBar -->
+
+  <!-- Fix NavBar -->
   <link rel="stylesheet" href="css/navbarfix.css">
+  <!-- Chat CSS and JS -->
+  <link rel="stylesheet" href="css/Chat.css">
+  <script src="js/ChatFunctionality.js"></script>
 
 </head>
 
@@ -106,139 +109,193 @@
   <div class="container">
     <!--main content start-->
     <main>
-      <section class="wrapper">
-        <div class="row">
-          <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
-            <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-              <li><i class="fa fa-tasks"></i>Project Pages</li>
-              <li><i class="fa fa-users"></i>Create a Project Page</li>
-            </ol>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <section class="panel">
-              <header class="panel-heading">
-                Project Page Form
-              </header>
-              <div class="panel-body">
-                <form class="form-horizontal " method="get">
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Name of Project</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Project Owner</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Project Description</label>
-                    <div class="col-sm-10">
-                      <textarea rows="10" class="form-control"> </textarea>
+      <div class="container-fluid ">
+        <div class="row ">
+          <div class="col-lg-14">
+            <!-- Page Content -->
 
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Start Date </label>
-                    <div class="col-sm-4">
-                      <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Team Members</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label"> Project Completion</label>
-                    <div class="col-sm-10">
-                      <select class="form-control m-bot15">
-                        <option>0%</option>
-                        <option>10%</option>
-                        <option>20%</option>
-                        <option>30%</option>
-                        <option>40%</option>
-                        <option>50%</option>
-                        <option>60%</option>
-                        <option>70%</option>
-                        <option>80%</option>
-                        <option>90%</option>
-                        <option>100%</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
-                    <div class="col-sm-10">
-                      <input type="file" id="exampleInputFile">
-                      <p class="help-block">Example block-level help text here.</p>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Project Tags</label>
-                    <div class="col-lg-10">
-                      <input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Project Page Creator Email</label>
-                    <div class="col-lg-10">
-                      <p class="form-control-static">john.doe@upr.edu</p>
-                    </div>
-                  </div>
-
-                  <button type="submit" class="btn btn-primary pull-right">Create</button>
-                </form>
+            <section class="wrapper">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
+                  <ol class="breadcrumb">
+                    <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa fa-tasks"></i>Project Pages</li>
+                    <li><i class="fa fa-users"></i>Create a Project Page</li>
+                  </ol>
+                </div>
               </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <section class="panel">
+                    <header class="panel-heading">
+                      Project Page Form
+                    </header>
+                    <div class="panel-body">
+                      <form class="form-horizontal " method="get">
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Name of Project</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Project Owner</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Project Description</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control">
+
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Start Date </label>
+                          <div class="col-sm-4">
+                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Team Members</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label"> Project Completion</label>
+                          <div class="col-sm-10">
+                            <select class="form-control m-bot15">
+                              <option>0%</option>
+                              <option>10%</option>
+                              <option>20%</option>
+                              <option>30%</option>
+                              <option>40%</option>
+                              <option>50%</option>
+                              <option>60%</option>
+                              <option>70%</option>
+                              <option>80%</option>
+                              <option>90%</option>
+                              <option>100%</option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
+                          <div class="col-sm-10">
+                            <input type="file" id="exampleInputFile">
+                            <p class="help-block">Example block-level help text here.</p>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-2 control-label">Project Tags</label>
+                          <div class="col-lg-10">
+                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-2 control-label">Project Page Creator Email</label>
+                          <div class="col-lg-10">
+                            <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary pull-right">Create</button>
+                      </form>
+                    </div>
+                  </section>
+                </div>
+              </div>
+              <!-- Basic Forms & Horizontal Forms-->
+              <!-- page end-->
             </section>
+            <!-- Chat Seccion-->
+            <div class="col-md-2  pull-right">
+              <div class="chat-sidebar">
+                <div class="sidebar-name">
+                  <!-- Pass username and display name to register popup -->
+                  <a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>Narayan Prusty</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qnimate', 'QNimate');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QNimate</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qscutter', 'QScutter');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QScutter</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qidea', 'QIdea');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QIdea</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qazy', 'QAzy');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QAzy</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qblock', 'QBlock');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QBlock</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <!-- Basic Forms & Horizontal Forms-->
-        <!-- page end-->
-      </section>
     </main>
     <!--main content end-->
-  </div>
+    </div>
 
-  <!-- container section end -->
+    <!-- container section end -->
 
 
-  <!-- javascripts -->
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
-  <script src="js/jquery.scrollTo.min.js"></script>
-  <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <!-- javascripts -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- nice scroll -->
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
 
-  <!-- jquery ui -->
-  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <!-- jquery ui -->
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
 
-  <!--custom checkbox & radio-->
-  <script type="text/javascript" src="js/ga.js"></script>
-  <!--custom switch-->
-  <script src="js/bootstrap-switch.js"></script>
-  <!--custom tagsinput-->
-  <script src="js/jquery.tagsinput.js"></script>
+    <!--custom checkbox & radio-->
+    <script type="text/javascript" src="js/ga.js"></script>
+    <!--custom switch-->
+    <script src="js/bootstrap-switch.js"></script>
+    <!--custom tagsinput-->
+    <script src="js/jquery.tagsinput.js"></script>
 
-  <!-- colorpicker -->
+    <!-- colorpicker -->
 
-  <!-- bootstrap-wysiwyg -->
-  <script src="js/jquery.hotkeys.js"></script>
-  <script src="js/bootstrap-wysiwyg.js"></script>
-  <script src="js/bootstrap-wysiwyg-custom.js"></script>
-  <!-- ck editor -->
-  <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-  <!-- custom form component script for this page-->
-  <script src="js/form-component.js"></script>
-  <!-- custome script for all page -->
-  <script src="js/scripts.js"></script>
+    <!-- bootstrap-wysiwyg -->
+    <script src="js/jquery.hotkeys.js"></script>
+    <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg-custom.js"></script>
+    <!-- ck editor -->
+    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+    <!-- custom form component script for this page-->
+    <script src="js/form-component.js"></script>
+    <!-- custome script for all page -->
+    <script src="js/scripts.js"></script>
 
 
 
