--- a/public/SubmitResumePage.html
+++ b/public/SubmitResumePage.html
@@ -41,7 +41,9 @@
   <link rel="stylesheet" href="css/navbarfix.css">
   <!-- ck editor -->
   <script src="assets/ckeditor/ckeditor.js"></script>
-
+  <!-- Chat CSS and JS -->
+  <link rel="stylesheet" href="css/Chat.css">
+  <script src="js/ChatFunctionality.js"></script>
 
 
 </head>
@@ -109,71 +111,126 @@
   <div class="container">
     <!--main content start-->
     <main>
-      <section class="wrapper">
-        <div class="row">
-          <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-file-text-o"></i> Submit Resume</h3>
-            <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-              <li><i class="fa fa-users"></i>Profile</li>
-              <li><i class="fa fa-file-text-o"></i>Submit Resume</li>
-            </ol>
-          </div>
-        </div>
-        <!-- CKEditor -->
-        <div class="row">
-          <div class="col-lg-12">
-            <section class="panel">
-              <header class="panel-heading">Resume Input Field</header>
+      <div class="container-fluid ">
+        <div class="row ">
+          <div class="col-lg-14">
+            <!-- Page Content -->
 
-              <div class="panel-body">
-                <div class="form">
-                  <form action="#" class="form-horizontal">
-                    <div class="form-group">
-                      <div class="col-lg-12">
-                        <textarea class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
-                        <script>
-                          CKEDITOR.replace('editor1')
-                        </script>
+            <section class="wrapper">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h3 class="page-header"><i class="fa fa-file-text-o"></i> Submit Resume</h3>
+                  <ol class="breadcrumb">
+                    <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa fa-users"></i>Profile</li>
+                    <li><i class="fa fa-file-text-o"></i>Submit Resume</li>
+                  </ol>
+                </div>
+              </div>
+              <!-- CKEditor -->
+              <div class="row">
+                <div class="col-lg-12">
+                  <section class="panel">
+                    <header class="panel-heading">Resume Input Field</header>
+
+                    <div class="panel-body">
+                      <div class="form">
+                        <form action="#" class="form-horizontal">
+                          <div class="form-group">
+                            <div class="col-lg-12">
+                              <textarea class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
+                              <script>
+                                CKEDITOR.replace('editor1')
+                              </script>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                      <br/>
+                      <div class="pull-right">
+                        <button type="submit" class="btn btn-primary">Create</button>
                       </div>
                     </div>
-                  </form>
-                </div>
-                <br/>
-                <div class="pull-right">
-                  <button type="submit" class="btn btn-primary"  >Create</button>
+                  </section>
                 </div>
               </div>
             </section>
+            
+             <!-- Chat Seccion-->
+            <div class="col-md-2  pull-right">
+              <div class="chat-sidebar">
+                <div class="sidebar-name">
+                  <!-- Pass username and display name to register popup -->
+                  <a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>Narayan Prusty</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qnimate', 'QNimate');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QNimate</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qscutter', 'QScutter');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QScutter</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qidea', 'QIdea');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QIdea</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qazy', 'QAzy');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QAzy</span>
+                  </a>
+                </div>
+                <div class="sidebar-name">
+                  <a href="javascript:register_popup('qblock', 'QBlock');">
+                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                    />
+                    <span>QBlock</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </section>
     </main>
-  </div>
-  </div>
-  <!-- javascripts -->
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
-  <script src="js/jquery.scrollTo.min.js"></script>
-  <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-  <!-- jquery ui -->
-  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-  <!--custom checkbox & radio-->
-  <script type="text/javascript" src="js/ga.js"></script>
-  <!--custom switch-->
-  <script src="js/bootstrap-switch.js"></script>
-  <!--custom tagsinput-->
-  <script src="js/jquery.tagsinput.js"></script>
-  <!-- bootstrap-wysiwyg -->
-  <script src="js/jquery.hotkeys.js"></script>
-  <script src="js/bootstrap-wysiwyg.js"></script>
-  <script src="js/bootstrap-wysiwyg-custom.js"></script>
+    </div>
+    </div>
+    <!-- javascripts -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- nice scroll -->
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <!-- jquery ui -->
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <!--custom checkbox & radio-->
+    <script type="text/javascript" src="js/ga.js"></script>
+    <!--custom switch-->
+    <script src="js/bootstrap-switch.js"></script>
+    <!--custom tagsinput-->
+    <script src="js/jquery.tagsinput.js"></script>
+    <!-- bootstrap-wysiwyg -->
+    <script src="js/jquery.hotkeys.js"></script>
+    <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg-custom.js"></script>
 
-  <!-- custom form component script for this page-->
-  <script src="js/form-component.js"></script>
-  <!-- custome script for all page -->
-  <script src="js/scripts.js"></script>
+    <!-- custom form component script for this page-->
+    <script src="js/form-component.js"></script>
+    <!-- custome script for all page -->
+    <script src="js/scripts.js"></script>
 
 </body>
 
