--- a/public/SubmitResumePage.html
+++ b/public/SubmitResumePage.html
@@ -148,7 +148,7 @@
                       </div>
                       <br/>
                       <div class="pull-right">
-                        <button type="submit" class="btn btn-primary">Create</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                       </div>
                     </div>
                   </section>
