Created SubmitIPA html A create project page fue que creo que le puse un espacio para poder leer algo mas facilmente. No cambio nada en ese UI.

--- a/public/SubmitIPA.html
+++ b/public/SubmitIPA.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Project Page </title>
+  <title>Submit Project IPA</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,75 +117,39 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
+                  <h3 class="page-header"><i class="fa fa-university"></i>Submit IPA</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Project Pages</li>
-                    <li><i class="fa fa-users"></i>Create a Project Page</li>
+                    <li><i class="fa fa-tasks"></i>Project Page</li>
+                    <li><i class="fa fa-university"></i>Submit IPA</li>
                   </ol>
                 </div>
               </div>
+
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">
-                      Project Page Form
+                      Project Summary
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Name of Project</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                            <p class="form-control-static">Test Project</p>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Project Owner</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                            <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Project Description</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Start Date </label>
-                          <div class="col-sm-4">
-                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Team Members</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label"> Project Completion</label>
-                          <div class="col-sm-10">
-                            <select class="form-control m-bot15">
-                              <option>0%</option>
-                              <option>10%</option>
-                              <option>20%</option>
-                              <option>30%</option>
-                              <option>40%</option>
-                              <option>50%</option>
-                              <option>60%</option>
-                              <option>70%</option>
-                              <option>80%</option>
-                              <option>90%</option>
-                              <option>100%</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
-                          <div class="col-sm-10">
-                            <input type="file" id="exampleInputFile">
-                            <p class="help-block">Example block-level help text here.</p>
+                            <p class="form-control-static">Test project description</p>
                           </div>
                         </div>
                         <div class="form-group">
@@ -200,15 +164,31 @@
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
                         </div>
-
-                        <button type="submit" class="btn btn-primary pull-right">Create</button>
                       </form>
-                    </div>
+                  </section>
+                  </div>
+                  <div class="col-lg-12">
+                    <section class="panel">
+                      <header class="panel-heading">
+                        IPA File Upload
+                      </header>
+                      <div class="panel-body">
+                        <form class="form-horizontal " method="get">
+                          <div class="form-group">
+                            <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
+                            <div class="col-sm-10">
+                              <input type="file" id="exampleInputFile">
+                              <p class="help-block">Example block-level help text here.</p>
+                            </div>
+                          </div>
+                          <button type="submit" class="btn btn-primary pull-right">Create</button>
+                      </div>
+                  </div>
+                  </form>
                   </section>
                 </div>
-              </div>
-              <!-- Basic Forms & Horizontal Forms-->
-              <!-- page end-->
+                <!-- Basic Forms & Horizontal Forms-->
+                <!-- page end-->
             </section>
             <!-- Chat Seccion-->
             <div class="col-md-2  pull-right">
@@ -258,7 +238,7 @@
                 </div>
               </div>
             </div>
-          </div>
+            </div>
     </main>
     <!--main content end-->
     </div>
