--- a/public/CreateGroupPage.html
+++ b/public/CreateGroupPage.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Project Page </title>
+  <title>Create Group Page </title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,11 +117,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Create a Group Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Project Pages</li>
-                    <li><i class="fa fa-users"></i>Create a Project Page</li>
+                    <li><i class="fa fa-tasks"></i>Group Pages</li>
+                    <li><i class="fa fa-beer"></i>Create a Group Page</li>
                   </ol>
                 </div>
               </div>
@@ -129,73 +129,49 @@
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">
-                      Project Page Form
+                      Group Page Form
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Name of Project</label>
+                          <label class="col-sm-2 control-label">Group Name</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Owner</label>
+                          <label class="col-sm-2 control-label">Group Administrator</label>
+                          <div class="col-sm-10">
+                            <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Group Description</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Description</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Start Date </label>
-                          <div class="col-sm-4">
-                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Team Members</label>
+                          <label class="col-sm-2 control-label">Invite Members</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label"> Project Completion</label>
-                          <div class="col-sm-10">
-                            <select class="form-control m-bot15">
-                              <option>0%</option>
-                              <option>10%</option>
-                              <option>20%</option>
-                              <option>30%</option>
-                              <option>40%</option>
-                              <option>50%</option>
-                              <option>60%</option>
-                              <option>70%</option>
-                              <option>80%</option>
-                              <option>90%</option>
-                              <option>100%</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile">Project Picture</label>
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
                           <div class="col-sm-10">
                             <input type="file" id="exampleInputFile">
-                            <p class="help-block">Upload a picture to represent your Project!</p>
+                            <p class="help-block">Upload a picture to represent your Group!</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Tags</label>
+                          <label class="col-lg-2 control-label">Group Tags</label>
                           <div class="col-lg-10">
-                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
+                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Page Creator Email</label>
+                          <label class="col-lg-2 control-label">Group Page Creator Email</label>
                           <div class="col-lg-10">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
