--- a/public/EditGroup.html
+++ b/public/EditGroup.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Group Page </title>
+  <title>Edit Group Page </title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,11 +117,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-beer"></i> Create a Group Page</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Edit Group Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-tasks"></i>Group Pages</li>
-                    <li><i class="fa fa-beer"></i>Create a Group Page</li>
+                    <li><i class="fa fa-beer"></i>Edit Group Page</li>
                   </ol>
                 </div>
               </div>
@@ -135,31 +135,40 @@
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Group Name</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                          <div class="col-sm-8">
+                            <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Group Administrator</label>
-                          <div class="col-sm-10">
+                          <div class="col-sm-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Group Description</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                          <div class="col-sm-8">
+                            <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Invite Members</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
-                          <div class="col-sm-10">
+
+                          <div class="col-sm-2">
+                            <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
+                          </div>
+
+
+                          <div class="col-sm-6">
                             <input type="file" id="exampleInputFile">
                             <p class="help-block">Upload a picture to represent your Group!</p>
                           </div>
@@ -172,12 +181,13 @@
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Administrator Email</label>
-                          <div class="col-lg-10">
+                          <div class="col-lg-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
+                          </div>
                         </div>
-
-                        <button type="submit" class="btn btn-primary pull-right">Create</button>
                       </form>
                     </div>
                   </section>
