--- a/public/EditGroup.html
+++ b/public/EditGroup.html
@@ -188,6 +188,10 @@
                             <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
+                        <div class="form-group">
+                          <button type="submit" class="btn btn-danger btn-block">DELETE GROUP</button>
+                        </div>
+
                       </form>
                     </div>
                   </section>
