--- a/public/EditGroup.html
+++ b/public/EditGroup.html
@@ -189,9 +189,10 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <button type="submit" class="btn btn-danger btn-block">DELETE GROUP</button>
+                          <div class="col-lg-12 col-centered">
+                            <button type="submit" class="btn btn-danger btn-block">DELETE GROUP</button>
+                          </div>
                         </div>
-
                       </form>
                     </div>
                   </section>
