Create Event Page Done

--- a/public/CreateEventPage.html
+++ b/public/CreateEventPage.html
@@ -117,11 +117,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-beer"></i> Create a Group Page</h3>
+                  <h3 class="page-header"><i class="fa fa-users"></i> Create a Event Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Group Pages</li>
-                    <li><i class="fa fa-beer"></i>Create a Group Page</li>
+                    <li><i class="fa fa-tasks"></i>Event Pages</li>
+                    <li><i class="fa fa-users"></i>Create a Event Page</li>
                   </ol>
                 </div>
               </div>
@@ -129,24 +129,30 @@
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">
-                      Group Page Form
+                      Event Page Form
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Group Name</label>
+                          <label class="col-sm-2 control-label">Event Name</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Group Administrator</label>
+                          <label class="col-sm-2 control-label">Event Administrator</label>
                           <div class="col-sm-10">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Group Description</label>
+                          <label class="col-sm-2 control-label">Event Description</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label">Event Location</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
@@ -158,14 +164,14 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>  Event Picture</label>
                           <div class="col-sm-10">
                             <input type="file" id="exampleInputFile">
-                            <p class="help-block">Upload a picture to represent your Group!</p>
+                            <p class="help-block">Upload a picture to represent your Event!</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Group Tags</label>
+                          <label class="col-lg-2 control-label">Event Tags</label>
                           <div class="col-lg-10">
                             <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
                           </div>
