Revised navbar for all available pages. Created ViewAllTags UI however it isn't done yet.

--- a/public/SubmitIPA.html
+++ b/public/SubmitIPA.html
@@ -62,35 +62,35 @@
         <div class="navbar-brand" style="padding: 8px 15px; ">
           <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
       </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Profile</a>
-          </li>
-          <li>
-            <a href="#">Followers</a>
-          </li>
+     			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="#"><i class="fa fa-home"></i> Home</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-user"></i> Profile</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-users"></i> Followers</a>
+					</li>
 
-          <li>
-            <a href="#">Interests</a>
-          </li>
-          <li>
-            <a href="#">Groups</a>
-          </li>
-          <li>
-            <a href="#">Events</a>
-          </li>
-          <li>
-            <a href="#">Community</a>
-          </li>
-          <li>
-            <a href="#">About PIPS</a>
-          </li>
-        </ul>
+					<li>
+						<a href="#"><i class="fa fa-briefcase"></i> Projects</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-beer"></i> Groups</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-calendar"></i> Events</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-tags"></i> Tags</a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
+					</li>
+				</ul>
         <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
           <div id="search">
             <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
