Changes in consistency across various pages mostly with icons. Changes to CreateAccount: 1. Made it similar to Login visually 2. Eliminated picture uploading, should be left to EditProfile. 3. Added confirm password edittext.

--- a/public/CreateGroupPage.html
+++ b/public/CreateGroupPage.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Group Page </title>
+  <title>New Group</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
