--- a/public/EditGroup.html
+++ b/public/EditGroup.html
@@ -128,8 +128,7 @@
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
-                    <header class="panel-heading">
-                      Group Page Form
+                    <header class="panel-heading">Group Summary
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
