--- a/public/CreateAccountPage.html
+++ b/public/CreateAccountPage.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Login Page </title>
+  <title>Welcome to PIPS</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,58 +35,33 @@
 <body class="login-img3-body">
   <div class="container">
     <br></br>
-    <div class="container-fluid ">
-      <div class="row ">
-        <div class="col-md-8 ">
-          <!-- Page Content -->
-
-          <section class="wrapper">
-            <div class="row">
-              <div class="col-md-6">
-                <h3 class="page-header"><i class="fa fa-users"></i> Create an Account</h3>
-              </div>
-            </div>
-            <section class="panel col-md-6">
-              <header class="panel-heading">
-                New Account Info
-              </header>
-              <div class="panel-body">
-                <form class="form-horizontal" role="form">
-                  <div class="form-group">
-                    <label for="inputEmail1" class="col-sm-3 control-label">Email</label>
-                    <div class="col-md-8">
-                      <input type="email" class="form-control" id="inputEmail1" placeholder="Ex: john.doe@upr.edu">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputPassword1" class="col-sm-3 control-label">Password</label>
-                    <div class="col-md-8">
-                      <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-3 control-label" for="exampleInputFile">User Picture</label>
-                    <div class="col-md-8">
-                      <input type="file" id="exampleInputFile">
-                      <p class="help-block">Upload a Profile Picture</p>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-lg-offset-2 col-md-6">
-                      <button type="submit" class="btn btn-danger">Create Account</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </section>
-            <!-- Basic Forms & Horizontal Forms-->
-            <!-- page end-->
-          </section>
-          </form>
-
+    <form class="login-form" action="index.html">
+      <div class="login-wrap">
+        <div>
+          <p><b>Account Information</p>
+          <hr>
         </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <input type="text" class="form-control" placeholder="Username" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-key"></i></span>
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-key"></i></span>
+          <input type="password" class="form-control" placeholder="Repeat Password">
+        </div>
+
+        <button type="button" class="btn btn-success btn-block" type="submit">Create Account</button>
       </div>
-    </div>
+    </form>
+
+
+    <!-- Basic Forms & Horizontal Forms-->
+    <!-- page end-->
+
   </div>
   </div>
 
