--- a/public/CreateEventPage.html
+++ b/public/CreateEventPage.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Event Page </title>
+  <title>New Event</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,11 +117,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-calendar-plus-o"></i>Create a Event Page</h3>
+                  <h3 class="page-header"><i class="fa fa-calendar"></i>Create a Event Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-tasks"></i>Event Pages</li>
-                    <li><i class="fa fa-calendar-plus-o"></i></i>Create a Event Page</li>
+                    <li><i class="fa fa-calendar"></i></i>Create a Event Page</li>
                   </ol>
                 </div>
               </div>
