--- a/public/CreateProjectPage.html
+++ b/public/CreateProjectPage.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Create Project Page </title>
+  <title>New Project</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -62,35 +62,35 @@
         <div class="navbar-brand" style="padding: 8px 15px; ">
           <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
       </div>
-      			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#"><i class="fa fa-home"></i> Home</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-user"></i> Profile</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-users"></i> Followers</a>
-					</li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="#"><i class="fa fa-home"></i> Home</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-user"></i> Profile</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-users"></i> Followers</a>
+          </li>
 
-					<li>
-						<a href="#"><i class="fa fa-briefcase"></i> Projects</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-beer"></i> Groups</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-calendar"></i> Events</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-tags"></i> Tags</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
-					</li>
-				</ul>
+          <li>
+            <a href="#"><i class="fa fa-briefcase"></i> Projects</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-beer"></i> Groups</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-calendar"></i> Events</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-tags"></i> Tags</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
+          </li>
+        </ul>
         <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
           <div id="search">
             <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
@@ -117,11 +117,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
+                  <h3 class="page-header"><i class="fa fa-briefcase"></i> Create a Project Page</h3>
                   <ol class="breadcrumb">
-                    <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Project Pages</li>
-                    <li><i class="fa fa-users"></i>Create a Project Page</li>
+                    <li><i class="fa fa-home"></i><a href="index.html"> Home</a></li>
+                    <li><i class="fa fa-tasks"></i> Project Pages</li>
+                    <li><i class="fa fa-briefcase"></i> Create a Project Page</li>
                   </ol>
                 </div>
               </div>
@@ -182,7 +182,7 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile">Project Picture</label>
+                          <label class="col-sm-2 control-label" for="exampleInputFile"><i class="fa fa-picture-o"></i> Project Picture</label>
                           <div class="col-sm-10">
                             <input type="file" id="exampleInputFile">
                             <p class="help-block">Upload a picture to represent your Project!</p>
