--- a/public/LoginPage.html
+++ b/public/LoginPage.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Login Page </title>
+  <title>Welcome to PIPS</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,20 +31,22 @@
 
 
 </head>
-
 <body class="login-img3-body">
-
   <div class="container">
     <br></br>
     <form class="login-form" action="index.html">
       <div class="login-wrap">
-
+        <div>
+          <p><b>Sign-Up or Login</p>
+          <hr>
+        </div>
+        
         <div class="input-group">
-          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
           <input type="text" class="form-control" placeholder="Username" autofocus>
         </div>
         <div class="input-group">
-          <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+          <span class="input-group-addon"><i class="fa fa-key"></i></span>
           <input type="password" class="form-control" placeholder="Password">
         </div>
         <label class="checkbox">
@@ -55,10 +57,7 @@
         <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
       </div>
     </form>
-
   </div>
-
-
 </body>
 
 </html>
