Changes to ProjectPage and EventPage so the progress bars would look neater.

--- a/public/ProjectPage.html
+++ b/public/ProjectPage.html
@@ -64,35 +64,34 @@
         <div class="navbar-brand" style="padding: 8px 15px; ">
           <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
       </div>
-     			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#"><i class="fa fa-home"></i> Home</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-user"></i> Profile</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-users"></i> Followers</a>
-					</li>
-
-					<li>
-						<a href="#"><i class="fa fa-briefcase"></i> Projects</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-beer"></i> Groups</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-calendar"></i> Events</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-tags"></i> Tags</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
-					</li>
-				</ul>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="#"><i class="fa fa-home"></i> Home</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-user"></i> Profile</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-users"></i> Followers</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-briefcase"></i> Projects</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-beer"></i> Groups</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-calendar"></i> Events</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-tags"></i> Tags</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
+          </li>
+        </ul>
         <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
           <div id="search">
             <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
@@ -138,29 +137,23 @@
                           <img src="img/12048798_10153709166102375_1827324476_n.jpg" alt="">
                         </div>
                       </div>
-                      <div class="col-lg-4 col-sm-4 follow-info">
-                        <p>Project Description .....................................</p>
+                      <div class="col-lg-10" style="margin-top: 2%">
+                        <button type="submit" class="btn btn-primary btn pull-right">Request To Join Project</button>
+                        <br></br>
+                        <button type="submit" class="btn btn-primary btn pull-right">Follow Project</button>
                       </div>
-                      <div class="col-lg-3 col-sm-6 follow-info weather-category">
+                       <div class="col-lg-12">
                         <ul>
-                          <li class="active">
-                            <p class="">
-                              Project Progress Bars
-                            </p>
-                            <div class="progress progress-striped active progress-sm">
-                              <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
-                              style="width: 50%">
-                                <span> 50% Complete</span>
+                          <li class="active pull-center">
+                            <p class="">Project Progress</p><hr>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+                              style="width:50%"><span><b>50% Complete</b></span>
                               </div>
                             </div>
                           </li>
-
+                          <hr>
                         </ul>
-                      </div>
-                      <div class="col-lg-3" style="margin-top: 2%">
-                        <button type="submit" class="btn btn-primary">Request To Join Project</button>
-                        <br></br>
-                        <button type="submit" class="btn btn-primary">Follow Project</button>
                       </div>
                     </div>
                   </div>
@@ -320,7 +313,7 @@
                               from Massey University with a Bachelor of Design majoring in visual communication.
                             </div>
                             <div class="panel-body bio-graph-info">
-                              <h1>Bio Graph</h1>
+                              <hr>
                               <div class="row">
                                 <div class="bio-row">
                                   <p><span>Project Name </span>: P.I.P.S </p>
@@ -340,7 +333,7 @@
                                 <div class="bio-row">
                                   <p><span>Creator Email </span>: jenifer@mailname.com</p>
                                 </div>
-                                
+
                               </div>
                             </div>
                           </section>
@@ -426,7 +419,7 @@
                                   <button type="button" class="btn btn-danger pull-left">Cancel</button>
                                 </div>
                               </div>
-                              
+
                               </form>
                             </div>
                           </section>
